# pywrk

./: .gitignore  pyproject.toml
pywrk/: main.py  manage.py  request.py  util.py
pywrk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_py_wrk.py
